* Thu Dec 17 2020 Yiru Wang  <wangyiru1@huawei.com> 
- Add the basic schema file for pkgship